# cmuvs

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
include/cmuvs/: cmuvs.h  se3.h  util.h
src/: se3.cpp  util.cpp
tests/: CMakeLists.txt  test_main.cpp
